<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_msg">Welcome to ALC 4.0</string>
    <string name="btn_about">ABOUT ALC</string>
    <string name="btn_profile">MY PROFILE</string>
    <string name="alc_url">https://andela.com/alc/</string>
    <string name="alc_domain">https://andela.com</string>
    <string name="profile_desc">Profile picture</string>
    <string name="profile_name">Sylvain Kamdem</string>
    <string name="profile_track_label">Track:</string>
    <string name="profile_track_value">Android</string>
    <string name="profile_country_label">Country:</string>
    <string name="profile_country_value">Ivory Coast</string>
    <string name="profile_email_label">Email:</string>
    <string name="profile_email_value">sylvainlk@gmail.com</string>
    <string name="profile_phone_label">Phone Number:</string>
    <string name="profile_phone_value">22565400805</string>
    <string name="profile_slack_label">Slack Username:</string>
    <string name="profile_slack_value">\@theSlyest</string>
</resources>
